--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".FastAdapterActivity" />
         <activity android:name=".ExerciseActivity"></activity>
         <activity android:name=".ViewTypeActivity" />
         <activity android:name=".GridActivity" />
